--- a/static/loader.html
+++ b/static/loader.html
@@ -26,7 +26,7 @@ if (isLoggedIn === 'correct') {
 <script>
 window.onload = function () {
       let encodedUrl = localStorage.getItem("encodedUrl");
-      encodedUrl = "/students/lesson/" + encodedUrl;
+      encodedUrl = "/uv/session/" + encodedUrl;
       document.querySelector("#siteurl").src = encodedUrl;
     };
 </script>
