--- a/static/tt.html
+++ b/static/tt.html
@@ -11,7 +11,7 @@
         window.navigator.serviceWorker.register('/sw.js', {
             scope: __uv$config.prefix
         }).then(() => {
-            location.href=__uv$config.prefix + __uv$config.encodeUrl('https://youtube.com');
+            location.href=__uv$config.prefix + __uv$config.encodeUrl('https://tiktok.com');
         });
     </script>
 </body>
