--- a/static/apps/dis/app.html
+++ b/static/apps/dis/app.html
@@ -11,7 +11,7 @@
         window.navigator.serviceWorker.register('/sw.js', {
             scope: __uv$config.prefix
         }).then(() => {
-            location.href=__uv$config.prefix + __uv$config.encodeUrl('https://discord.com');
+            location.href=__uv$config.prefix + __uv$config.encodeUrl('https://discord.com/app');
         });
     </script>
 </body>
