--- a/static/gms/subway/app.html
+++ b/static/gms/subway/app.html
@@ -11,7 +11,7 @@
         window.navigator.serviceWorker.register('/sw.js', {
             scope: __uv$config.prefix
         }).then(() => {
-            location.href=__uv$config.prefix + __uv$config.encodeUrl('https://raw.githack.com/3kh0/3kh0-assets/main/subway-surfers/index.html');
+            location.href=__uv$config.prefix + __uv$config.encodeUrl('https://5dd312fa-015f-11ea-ad56-9cb6d0d995f7.poki-gdn.com/b966fd70-283f-4abd-940d-628bfed89adc/index.html?country=US&ccpaApplies=0&url_referrer=https%3A%2F%2Fpoki.com%2F&tag=pg-v3.139.0&site_id=3&iso_lang=en&poki_url=https%3A%2F%2Fpoki.com%2Fen%2Fg%2Fsubway-surfers&gdhoist=yes&nonPersonalized=n&familyFriendly=n&categories=3%2C4%2C6%2C9%2C86%2C88%2C93%2C96%2C103%2C183%2C903%2C929%2C1103%2C1126%2C1137%2C1140%2C1143%2C1147%2C1156%2C1159%2C1160%2C1163%2C1179%2C1185&special_condition=landing&game_id=5dd312fa-015f-11ea-ad56-9cb6d0d995f7&game_version_id=b966fd70-283f-4abd-940d-628bfed89adc');
         });
     </script>
 </body>
